objects/vlocity_cmt__Party_Association__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AssociationName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; vlocity_cmt__ObjectId__c,vlocity_cmt__Object_Value__c,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Object_Value__c</fullName>
        <label>Association Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerEmail__c</fullName>
        <formula>vlocity_cmt__OwnerId__r.Email</formula>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Party_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerName__c</fullName>
        <formula>vlocity_cmt__OwnerId__r.FirstName  + &apos; &apos; +  vlocity_cmt__OwnerId__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OwnerPhone__c</fullName>
        <formula>vlocity_cmt__OwnerId__r.Phone</formula>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PartyId__c</fullName>
        <label>Client</label>
        <referenceTo>vlocity_cmt__Party__c</referenceTo>
        <relationshipLabel>Party Associations</relationshipLabel>
        <relationshipName>Party_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Party Association</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Party Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>